# he_uc_lending

./: .dockerignore  .gitignore  CMakeLists.txt  HEIR_HOME_CREDIT_ENCRYPTED_EDA_OVERVIEW.md  HE_USE_CASES_AND_NOTEBOOK_CONTEXT.md  HOMOMORPHIC_ENCRYPTION_DESIGN.md  README.md
code/: __init__.py
code/benchmarks/: home_credit_core_eda_benchmark.py  home_credit_correlation_benchmark.py  home_credit_fhew_amt_bins_benchmark.py  home_credit_fhew_category_count_benchmark.py  home_credit_full_pearson_heir_benchmark.py  home_credit_heir_eda_benchmark.py  home_credit_previous_category_benchmark.py  home_credit_previous_loan_count_heir_benchmark.py  home_credit_single_missing_count_heir_benchmark.py
code/client/: README.md  prepare_binfhe_outlier_values.py  prepare_lending_payload.py
code/client/binfhe_outliers/: README.md  client_binfhe_decrypt_outliers.cpp  client_binfhe_encrypt_outliers.cpp  client_binfhe_keygen.cpp
code/client/ckks_tools/: decrypt_ckks_results.cpp  encrypt_home_credit_payload.cpp
code/client/fhew_tools/: decrypt_home_credit_fhew_amt_bins.cpp  decrypt_home_credit_fhew_category_count.cpp  decrypt_home_credit_fhew_match.cpp  encrypt_home_credit_fhew_amt.cpp  encrypt_home_credit_fhew_category.cpp  encrypt_home_credit_fhew_match.cpp
code/client/home_credit/: build_home_credit_scoring_features.py  download_job_bundle.py  package_home_credit_upload_bag.py  prepare_home_credit_basic_eda.py  prepare_home_credit_scoring.py  result_client_dashboard.py  train_home_credit_linear_model.py  train_home_credit_scoring_model.py
code/heir/: __init__.py
code/heir/home_credit/: README.md  __init__.py  prepare.py  report.py  runner.py  workloads.py
code/heir/home_credit/backends/: __init__.py  ckks_openfhe.py  full_pearson_ckks.py  generated_ckks.py  openfhe_dot.py  previous_loan_count_ckks.py  single_missing_count_ckks.py
code/heir/home_credit/kernels/: masked_default_count.py
code/heir/home_credit/scripts/: __init__.py  compile_kernel.py  run_full_pearson_benchmark.py  run_kernel_benchmark.py  run_previous_loan_count_benchmark.py  run_single_missing_count_benchmark.py
code/server/: README.md
code/server/binfhe_outliers/: README.md  server_binfhe_outlier_flags.cpp
code/server/fhew_amt_bins/: server_home_credit_fhew_amt_bins.cpp
code/server/fhew_category_count/: server_home_credit_fhew_category_count.cpp
code/server/fhew_match/: server_home_credit_fhew_match.cpp
code/server/home_credit_aggregate/: server_home_credit_aggregate.cpp  server_home_credit_token_join_aggregate.cpp
code/server/linear_score/: server_linear_score.cpp
code/server/numeric_summary/: README.md  server_numeric_summary.cpp
code/server/web/: README.md  he_job_server.py  requirements-async.txt
code/server/web/static/: index.html
code/server/web_async/: README.md
code/server/web_async/he_async_web/: __init__.py  app.py  job_types.py  runner.py  security.py  settings.py  storage.py  worker.py
deploy/docker/: Dockerfile.server  README.md  docker-compose.async.yml  nginx.conf  server-entrypoint.sh
deploy/systemd/: README.md  he-uc-credit.env.example  he-uc-credit.service  he-uc-lending.env.example  he-uc-lending.service  install_he_job_service.sh
docs/: HE_EDA_DATA_PREPARATION_LIMITS.md  HOME_CREDIT_5_14_TARGET_BY_GROUP_SUMMARY.md  HOME_CREDIT_BASIC_EDA_IMPLEMENTATION_MAP.md  HOME_CREDIT_COMPLETE_EDA_HE_MAPPING.md  HOME_CREDIT_CORE_HE_EDA_PROGRESS.md  HOME_CREDIT_CREDIT_SCORING.md  HOME_CREDIT_HEIR_EDA_INPUT_OUTPUT.md  HOME_CREDIT_HEIR_FULL_PEARSON.md  HOME_CREDIT_HEIR_PREVIOUS_LOAN_COUNT.md  HOME_CREDIT_HE_EDA_IMPLEMENTATION_TRACKER.md  HOME_CREDIT_HE_PLAN.md  HOME_CREDIT_IMPLEMENTED_CLIENT_SERVER_FLOW.md  HOME_CREDIT_JOIN_MATCHING_COMMANDS.md  SERVER_SIDE_EDA_PLAN.md  WEB_APP_PLAN.md  diagram.md
docs/diagrams/: 01_overall_home_credit_he_flow.md  02_notebook_eda_criteria.md  02_numeric_summary.md  03_category_default_rate_eda.md  03_missing_and_target_counts.md  04_application_eda_criteria.md  04_bucket_eda.md  05_domain_ratio_eda.md  05_previous_and_correlation_eda.md  06_linear_score.md  06_linear_score_demo.md  07_async_web_job_architecture.md  08_report_slide_project_context.md  09_credit_scoring_workflow.md  README.md
